[gd_scene load_steps=9 format=3 uid="uid://dnakqitx23ih0"]

[ext_resource type="Script" path="res://Level/level.gd" id="1_sc0ap"]
[ext_resource type="PackedScene" uid="uid://dffc26uerwjhi" path="res://Paths/path_link_mgr.tscn" id="2_tu7cs"]
[ext_resource type="PackedScene" uid="uid://mf6peg4j56ge" path="res://Player/player.tscn" id="3_rwnx7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlvnq"]
size = Vector2(10.28, 8.76623)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snwa2"]
size = Vector2(514, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohbwx"]
size = Vector2(514, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6o2jl"]
size = Vector2(24, 1147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0yl8"]
size = Vector2(39, 1147)

[node name="Level" type="Node"]
script = ExtResource("1_sc0ap")

[node name="PathLinkMgr" parent="." node_paths=PackedStringArray("level_area") instance=ExtResource("2_tu7cs")]
level_area = NodePath("../Player/bg")

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("3_rwnx7")]
position = Vector2(-1549, 298)

[node name="bg" type="ColorRect" parent="Player"]
show_behind_parent = true
offset_left = -742.0
offset_top = -596.0
offset_right = 3098.0
offset_bottom = 1564.0
color = Color(0.258824, 0.239216, 0.631373, 1)
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="Player/bg"]
position = Vector2(1920, 1080)
scale = Vector2(2, 2)

[node name="PlayerBound" type="Area2D" parent="Player"]
show_behind_parent = true
position = Vector2(-742, -596)
scale = Vector2(2, 2)

[node name="ColorRect" type="ColorRect" parent="Player/PlayerBound"]
offset_left = 127.0
offset_right = 641.0
offset_bottom = 1080.0
color = Color(0.368023, 0.00153556, 0.806766, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerBound"]
position = Vector2(384, 540)
scale = Vector2(50, 123.2)
shape = SubResource("RectangleShape2D_mlvnq")

[node name="NorthWall" type="StaticBody2D" parent="Player" groups=["PlayerWall"]]
show_behind_parent = true
position = Vector2(-742, -596)
scale = Vector2(2, 2)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/NorthWall"]
position = Vector2(384, -16)
shape = SubResource("RectangleShape2D_snwa2")

[node name="SouthWall" type="StaticBody2D" parent="Player" groups=["PlayerWall"]]
show_behind_parent = true
position = Vector2(-742, -596)
scale = Vector2(2, 2)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/SouthWall"]
position = Vector2(384, 1097.5)
shape = SubResource("RectangleShape2D_ohbwx")

[node name="WestWall" type="StaticBody2D" parent="Player" groups=["PlayerWall"]]
show_behind_parent = true
position = Vector2(-742, -596)
scale = Vector2(2, 2)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/WestWall"]
position = Vector2(115, 541.5)
shape = SubResource("RectangleShape2D_6o2jl")

[node name="EastWall" type="StaticBody2D" parent="Player" groups=["PlayerWall"]]
show_behind_parent = true
position = Vector2(-742, -596)
scale = Vector2(2, 2)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/EastWall"]
position = Vector2(660.5, 541.5)
shape = SubResource("RectangleShape2D_c0yl8")

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
